<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/close"
            android:contentDescription="@string/icon_close"
            android:onClick="closeImageClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/options"
            android:gravity="center|center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/icon_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:padding="8dp"
                android:src="@drawable/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/punkass"
            android:gravity="center_horizontal"
            android:text="@string/yimulu"
            android:textColor="#222A7B"
            android:textSize="85sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/titleSubtext"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/oneway"
            android:gravity="center"
            android:rotation="-20"
            android:text="@string/helper"
            android:textColor="#222A7B"
            android:textSize="30sp"
            app:layout_constraintCircleAngle="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.869"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleText" />

        <RelativeLayout
            android:id="@+id/rela"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/edit_text_background_unsel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleSubtext">


            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/icon_contact"
                android:onClick="onContactPickerClicked"
                android:src="@mipmap/contacts_icon" />

            <EditText
                android:id="@+id/phoneNoField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toStartOf="@+id/contact_icon"
                android:layout_toLeftOf="@+id/contact_icon"
                android:background="@color/Transparent"
                android:hint="@string/phone_number"
                android:textSize="15sp"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />



        </RelativeLayout>

        <EditText
            android:id="@+id/amountField"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/amount"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rela" />

        <!---

        <ImageView
            android:id="@+id/clear_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@+id/amountField"
            app:layout_constraintEnd_toEndOf="@+id/amountField"
            app:layout_constraintTop_toTopOf="@+id/amountField" />

        <ImageView
            android:id="@+id/clear_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@+id/pinField"
            app:layout_constraintEnd_toEndOf="@+id/pinField"
            app:layout_constraintTop_toTopOf="@+id/pinField"
            app:layout_constraintVertical_bias="1.0" />
-->
        <EditText
            android:id="@+id/pinField"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input"
            android:hint="@string/pin_code"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountField" />

        <Button
            android:id="@+id/ButtonSend"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_background"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinField"
            tools:layout_editor_absoluteX="410dp" />

        <LinearLayout
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ButtonSend">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/copyright" />
            </LinearLayout>

            <ImageView
                android:id="@+id/contact"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/social_media" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>